k8s/deployment.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myresumeapp-deployment
  namespace: myresume
  labels:
    app: myresumeapp
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myresumeapp
      version: v1
  template:
    metadata:
      labels:
        app: myresumeapp
        version: v1
    spec:
      hostNetwork: false
      containers:
      - name: myresumeapp
        image: IMAGE_NAME_TAG
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        
---
apiVersion: v1
kind: Service
metadata:
  name: myresumeapp-service
  namespace: myresume
spec:
  type: ClusterIP
  selector:
    app: myresumeapp
  ports:
    - port: 80
      name: "80"
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: '8600'
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"

  name: ing-myresumeapp
  namespace: myresume
spec:
  #tls:
  #- hosts:
  #  - "myresumeapi.sftcloud.com.mx"
  #  secretName: sftcloudcommx-cer
  rules:
  - host: "myresumeapp.k8s.sftcloud.com.mx"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myresumeapp-service
            port:
              number: 80
